--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ assemblyai
 boto3
 azure-cognitiveservices-speech
 deepgram-sdk==2.12.0
-speechmatics
+speechmatics-python
 httpx
 unidecode
 phonetics
